--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -28,7 +28,8 @@
 		"mikestead.dotenv",
 		"formulahendry.auto-close-tag",
 		"formulahendry.auto-rename-tag",
-		"aaron-bond.better-comments"
+		"aaron-bond.better-comments",
+		"ms-mssql.mssql"
 	],
 	// Use 'forwardPorts' to make a list of ports inside the container available locally.
 	// "forwardPorts": [],
