RMA-4 HotChocolate setup for the project
Implemented the Query class to create the queries necessary to interrogate the db

--- a/Web/RiskManagement.Api.csproj
+++ b/Web/RiskManagement.Api.csproj
@@ -1,15 +1,27 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
+    <UserSecretsId>76b539bc-db5b-4911-a241-4039d534278e</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3" />
+    <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="8.1.1" />
+    <PackageReference Include="GraphQl.Server.Ui.Voyager" Version="5.0.2" />
+    <PackageReference Include="HotChocolate.AspNetCore" Version="12.0.1" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="5.0.11" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="5.0.11">
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      <PrivateAssets>all</PrivateAssets>
+    </PackageReference>
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\Services\RiskManagement.Services.csproj" />
+  </ItemGroup>
+  <ItemGroup>
+      <!-- extends watching group to include *.js files -->
+      <Watch Include="**/Services/**/*" Exclude="obj/**/*;bin/**/*" />
   </ItemGroup>
 
 </Project>
