--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "nuxt-buefy": "^0.4.8",
     "vue-class-component": "^7.2.6",
     "vue-property-decorator": "^9.1.2",
-    "vuex-module-decorators": "^1.0.1"
+    "vuex-module-decorators": "^1.0.1",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@graphql-codegen/cli": "^2.2.1",
